chore: add codeowners and ci file

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "vitest": "vitest"
+    "test": "vitest"
   },
   "dependencies": {
     "react": "^19.1.1",
