--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "zaplytic-website",
   "private": true,
+  "license": "MIT",
   "version": "0.0.0",
   "type": "module",
   "packageManager": "yarn@1.22.22",
