--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,6 +10,9 @@
     ],
     "module": "ESNext",
     "skipLibCheck": true,
+    "types": [
+      "vite/client"
+    ],
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
