--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,9 +2,6 @@
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "target": "ES2023",
-    "lib": [
-      "ES2023"
-    ],
     "module": "ESNext",
     "skipLibCheck": true,
     /* Bundler mode */
@@ -23,7 +20,6 @@
   },
   "include": [
     "vite.config.ts",
-    "vitest.config.ts",
-    "test-setup.tsx"
+    "vitest.config.ts"
   ]
 }
